cmake_minimum_required(VERSION 3.15)
project(fastcdr_ex VERSION 2.3.0)

if (NOT DEFINED CMAKE_INSTALL_PREFIX)
    set(CMAKE_INSTALL_PREFIX "/opt/fastdds")
endif()

if (NOT DEFINED CPACK_PACKAGING_INSTALL_PREFIX)
    set(CPACK_PACKAGING_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
endif()

add_subdirectory(Fast-CDR)

include(InstallRequiredSystemLibraries)

#message(STATUS "fastcdr_VERSION = '${fastcdr_VERSION}'")

if(NOT DEFINED CPACK_PACKAGE_VERSION)
    set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
endif()

if(DEFINED CPACK_DEBIAN_PACKAGE_REVISION)
    set(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION}-${CPACK_DEBIAN_PACKAGE_REVISION}")
endif()

set(CPACK_PACKAGE_NAME "fast-cdr")
set(CPACK_PACKAGE_CONTACT "you@example.com")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
set(CPACK_GENERATOR "DEB")

set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")

include(CPack)

